src/test/deca/context/invalid/sansObjet/BadStringOperation.deca
{
    String a;
    String b;
    a = a+b ;
}